# ZeroBit-Player

./: .gitignore  README.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: 02-feature_request.yml  bug_report.md  feature_request.md
.github/workflows/: windows-release.yml
lib/: app_routes.dart  desktop_lyrics_sever.dart  local_music_page.dart  logger.dart  main.dart  operate_area.dart  setting_page.dart  theme_manager.dart  tray.dart  window_ctrl.dart
lib/API/: apis.dart
lib/HIveCtrl/: hive_boxes.dart  hive_crud.dart  hive_manager.dart  hive_types.dart  hive_typs.dart
lib/components/: audio_ctrl_btn.dart  audio_gen_pages.dart  blur_background.dart  edit_embedded_lyrics_dialog.dart  edit_metadata_dialog.dart  floating_button.dart  get_snack_bar.dart  lyrics_mesh.dart  lyrics_render.dart  music_list_tool.dart  play_bar.dart  sorted_list_view.dart  spring_list_view.dart  window_ctrl.dart  window_ctrl_bar.dart
lib/controller/: album_details_ctrl.dart  artist_details_ctrl.dart  audio_ctrl.dart  desktop_lyrics_setting_ctrl.dart  details_page_base_ctrl.dart  details_page_ctrl.dart  folders_details_ctrl.dart  lyric_ctrl.dart  music_cache_ctrl.dart  playlist_details_ctrl.dart  setting_ctrl.dart  user_playlist_ctrl.dart  window_ctrl.dart
lib/custom_widgets/: custom_button.dart  custom_dropMenu.dart  (+6 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: bass.rs  get_fonts.rs  mod.rs  music_tag_tool.rs  smtc.rs
rust/src/api/bass/: bass_errs.rs  bass_flags.rs  bass_func.rs  bassfx_func.rs  basswasapi_func.rs
rust_builder/: pubspec.yaml
windows/: CMakeLists.txt
(+105 files in other folders)
