[package]
name = "rust_lib_zerobit_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
lofty = "0.22.4"
image = "0.25.6"
once_cell = "1.21.3"
anyhow = "1.0.98"
libloading = "0.8.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
