[package]
name = "rust_lib_zerobit_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
lofty = "0.22.4"
image = "0.25.6"
once_cell = "1.21.3"
anyhow = "1.0.98"
ttf-parser = "0.25.1"
libloading = "0.8.8"
dirs = "6.0.0"
windows = {version = "0.61.3", features = [
    "Media_Playback",
    "Storage_Streams",
    "Storage_FileProperties"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
